--- a/theme/black/preview.css
+++ b/theme/black/preview.css
@@ -7,7 +7,7 @@ MainWindow {
 }
 
 #tabWidget_preview::pane {
-    border-image: url(:/切图-首页/右边底.png);
+    border-image: url(:/theme/icon/right-side.png);
 }
 
 #tabWidget_preview::tab-bar {
@@ -20,7 +20,7 @@ MainWindow {
     color:white;
     font: bold 15px "Microsoft YaHei UI";
     width:80px;
-    height:37px;
+    height:29px;
 }
 
 #tabWidget_preview QTabBar::tab:selected, QTabBar::tab:hover {
@@ -29,26 +29,25 @@ MainWindow {
 
 #tabWidget_preview #tab_welcome {
     background-color: #38393B;
-    background-image: url(:/切图-首页/产品图.png);
+    background-image: url(:/theme/icon/index.png);
     background-position:center;
     background-repeat: no-repeat;
 }
 
 #tabWidget_preview QGraphicsView {
     background-color: #38393B;
-    background-image: url(:/切图-首页/相机.png);
+    background-image: url(:/theme/icon/camera-background.png);
     background-position:center;
     background-repeat: no-repeat;
 }
 
 #widget_control {
-    border-image: url(:/切图-首页/下底.png);
+    border-image: url(:/theme/icon/bottom-side.png);
 }
 
 #widget_control QPushButton {
     border:none;
     color: #7F8082;
-    font: 15px "Microsoft YaHei UI";
 }
 
 #widget_control QPushButton:hover {
