--- a/cameraview.ui
+++ b/cameraview.ui
@@ -13,6 +13,9 @@
   <property name="mouseTracking">
    <bool>true</bool>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::WheelFocus</enum>
+  </property>
   <property name="windowTitle">
    <string/>
   </property>
