--- a/recorddialog.ui
+++ b/recorddialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>423</width>
-    <height>169</height>
+    <width>489</width>
+    <height>140</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,2,0">
      <item>
       <widget class="QLabel" name="label_19">
        <property name="text">
@@ -33,74 +33,78 @@
      <item>
       <widget class="QPushButton" name="pushButton_snap_path">
        <property name="text">
-        <string>...</string>
+        <string>Browser</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="5,5">
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="label_20">
-       <property name="text">
-        <string>Format：</string>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,0">
+       <item>
+        <widget class="QLabel" name="label_20">
+         <property name="text">
+          <string>Format：</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="comboBox_format">
+         <property name="currentIndex">
+          <number>3</number>
+         </property>
+         <item>
+          <property name="text">
+           <string>None</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Microsoft Video Compress</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>DivX</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>H264</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
-      <widget class="QComboBox" name="comboBox_format">
-       <property name="currentIndex">
-        <number>3</number>
-       </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="5,5">
        <item>
-        <property name="text">
-         <string>None</string>
-        </property>
+        <widget class="QLabel" name="label_21">
+         <property name="text">
+          <string>Quality(1-100)：</string>
+         </property>
+        </widget>
        </item>
        <item>
-        <property name="text">
-         <string>Microsoft Video Compress</string>
-        </property>
+        <widget class="QSpinBox" name="spinBox_quality">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>100</number>
+         </property>
+         <property name="value">
+          <number>50</number>
+         </property>
+        </widget>
        </item>
-       <item>
-        <property name="text">
-         <string>DivX</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>H264</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="5,5">
-     <item>
-      <widget class="QLabel" name="label_21">
-       <property name="text">
-        <string>Quality(1-100)：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QSpinBox" name="spinBox_quality">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="minimum">
-        <number>1</number>
-       </property>
-       <property name="maximum">
-        <number>100</number>
-       </property>
-       <property name="value">
-        <number>50</number>
-       </property>
-      </widget>
+      </layout>
      </item>
     </layout>
    </item>
@@ -110,6 +114,20 @@
       <widget class="QLabel" name="label_22">
        <property name="text">
         <string>Frames：</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="radioButton_2">
+       <property name="text">
+        <string>Real Time</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QRadioButton" name="radioButton">
+       <property name="text">
+        <string>Custom</string>
        </property>
       </widget>
      </item>
