--- a/recorddialog.ui
+++ b/recorddialog.ui
@@ -19,7 +19,7 @@
      <item>
       <widget class="QLabel" name="label_19">
        <property name="text">
-        <string>Save Dir：</string>
+        <string>Save Dir</string>
        </property>
       </widget>
      </item>
@@ -46,7 +46,7 @@
        <item>
         <widget class="QLabel" name="label_20">
          <property name="text">
-          <string>Format：</string>
+          <string>Format</string>
          </property>
         </widget>
        </item>
@@ -84,7 +84,7 @@
        <item>
         <widget class="QLabel" name="label_21">
          <property name="text">
-          <string>Quality(1-100)：</string>
+          <string>Quality(1-100)</string>
          </property>
         </widget>
        </item>
@@ -113,7 +113,7 @@
      <item>
       <widget class="QLabel" name="label_22">
        <property name="text">
-        <string>Frames：</string>
+        <string>Frames</string>
        </property>
       </widget>
      </item>
