--- a/snapshotdialog.ui
+++ b/snapshotdialog.ui
@@ -34,7 +34,7 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Save Dir：</string>
+           <string>Save Dir</string>
           </property>
          </widget>
         </item>
@@ -65,7 +65,7 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>File Name Prefix：</string>
+           <string>File Name Prefix</string>
           </property>
          </widget>
         </item>
@@ -114,7 +114,7 @@
           <item>
            <widget class="QLabel" name="label_21">
             <property name="text">
-             <string>Perios(ms)：</string>
+             <string>Perios(ms)</string>
             </property>
            </widget>
           </item>
@@ -138,7 +138,7 @@
           <item>
            <widget class="QLabel" name="label_20">
             <property name="text">
-             <string>Format：</string>
+             <string>Format</string>
             </property>
            </widget>
           </item>
@@ -178,7 +178,7 @@
      <item>
       <widget class="QLabel" name="label_22">
        <property name="text">
-        <string>Resolutions：</string>
+        <string>Resolutions</string>
        </property>
       </widget>
      </item>
