增加离线白平衡功能

--- a/resource.qrc
+++ b/resource.qrc
@@ -50,5 +50,6 @@
         <file>theme/images/tab.png</file>
         <file>theme/images/load.png</file>
         <file>theme/images/save.png</file>
+        <file>theme/images/tab2.png</file>
     </qresource>
 </RCC>
